--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -180,15 +180,7 @@ header .container .head_nav {
 header .container .head_nav ul {
   text-align: center;
 }
-header .container .head_nav ul .visited a:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background: black;
-  margin: 18.5px 0;
-  right: 0;
-}
+
 header .container .head_nav ul li {
   display: inline-block;
   margin: 0 15px;
@@ -207,6 +199,15 @@ header .container .head_nav ul li a:after {
   background: black;
   -webkit-transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  margin: 18.5px 0;
+  right: 0;
+}
+header .container .head_nav ul .visited a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: black;
   margin: 18.5px 0;
   right: 0;
 }
@@ -258,23 +259,21 @@ header {
 .mobile_menu {
   background: #2626a5;
   background: -webkit-radial-gradient(bottom right, #2626a5, #1e1e1e);
-  background: -moz-radial-gradient(bottom right, #2626a5, #1e1e1e);
-  background: radial-gradient(to top left, #2626a5, #1e1e1e);
+  background-image: -ms-radial-gradient(bottom right, #2626a5, #1e1e1e);
+  background-image: radial-gradient(to top left, #2626a5, #1e1e1e);
   width: 90%;
-
+  z-index: 5;
   top: 65px;
   left: 0;
   margin: 10px 20px;
   border-radius: 4px;
   position: absolute;
-
   display: none;
 }
 .mobile_menu:before {
   content: "";
   position: absolute;
   width: 0;
-
   height: 0;
   border-style: solid;
   border-width: 0 15px 15px 15px;
@@ -304,7 +303,6 @@ header {
   margin: 30px 0px;
 }
 .mobile_menu nav ul li a {
-  opacity: 0;
   font-size: 1.2rem;
   font-weight: 600;
   padding: 10px 0px;
@@ -1362,15 +1360,6 @@ q {
   display: block;
 }
 
-.footer-top__box a:link,
-.footer-top__box a:visited {
-  display: block;
-  color: #959595;
-  font-size: 1.1rem;
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
-}
-
 .footer-top__box a:hover {
   color: #ffffff;
 }
@@ -1718,10 +1707,6 @@ q {
   margin-left: 2rem;
 }
 
-.filter-title a:visited {
-  color: #1b2138;
-}
-
 .filter-section-ul li {
   display: block;
   margin-top: 1rem;
@@ -1918,8 +1903,12 @@ h3 {
 }
 
 .price {
-  color: grey;
-  font-size: 22px;
+  color: rgb(29, 29, 29);
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+.servis-btn {
+  margin: 0 auto;
 }
 
 .card button {
@@ -1955,7 +1944,7 @@ h3 {
   height: 150px;
 }
 .card-img-2 {
-  background-image: url("../img/servis/Računarske-komponente.png");
+  background: url("../img/servis/racunalne-komponente.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -2254,14 +2243,14 @@ h3 {
     height: 50%;
   }
   .card-img-2 {
-    background-image: url("../img/servis/Računarske-komponente.png");
+    background: url("../img/servis/racunalne-komponente.jpg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     height: 50%;
   }
   .card-img-3 {
-    background-image: url("../img/servis/servis-background.png");
+    background: url("../img/servis/servis-background.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -2271,8 +2260,10 @@ h3 {
     height: 100%;
   }
   .price {
-    color: grey;
     font-size: 22px;
+  }
+  .servis-btn {
+    display: inline-block;
   }
 
   .card button {
@@ -2309,7 +2300,7 @@ h3 {
   }
 }
 @media screen and (-ms-high-contrast: active),
-  (-ms-high-contrast: none) and (max-width: 780px) {
+  (-ms-high-contrast: none) and (max-width: 800px) {
   .main-heading {
     display: block;
     width: 100%;
