--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -14,9 +14,6 @@ body {
   background-color: rgba(243, 243, 243, 0.698);
   font-family: "Open Sans", sans-serif;
 }
-.display {
-  display: block !important;
-}
 
 /* utilites */
 button,
@@ -211,6 +208,7 @@ header .container .head_nav ul .visited a:after {
   margin: 18.5px 0;
   right: 0;
 }
+
 header .container .head_nav ul li a:hover:after {
   width: 100%;
   left: 0;
@@ -308,7 +306,9 @@ header {
   padding: 10px 0px;
   color: #fff;
 }
-
+.display {
+  display: block;
+}
 @media only screen and (max-width: 1100px) {
   header .container {
     width: 700px;
@@ -1352,6 +1352,14 @@ q {
 .footer-logo-grid a {
   width: 20px;
 }
+
+.footer-top__box a {
+  display: block;
+  color: #959595;
+  font-size: 1.1rem;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
 .footer-logo-grid a img {
   width: 100%;
   height: auto;
@@ -2217,7 +2225,7 @@ h3 {
   .button-container {
     justify-content: space-around;
   }
-  /* nav appear on small */
+
   .active {
     z-index: 2;
   }
