--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -328,6 +328,12 @@ header {
     width: 250px;
     margin-top: 0.6rem;
   }
+  .mobile-ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -350,7 +356,7 @@ header {
   .mobile_menu {
     position: absolute;
     z-index: 15;
-    height: 18rem;
+    height: 55vh;
   }
   .mobile_menu:before {
     margin: -10px 2px;
