--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -1734,6 +1734,9 @@ h3 {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
+  .featured-product-title {
+    display: none;
+  }
 }
 
 .featured-products-grid {
