--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -804,7 +804,7 @@ header {
   }
 }
 /*kraj novo u ponudi */
-/* SLIDESHOW ---------------*/
+/* SLIDESHOW  */
 
 /* Slideshow container */
 .slideshow-container {
@@ -1778,12 +1778,6 @@ h3 {
     margin-left: 0;
   }
 
-  .featured-product-item a h3 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    margin: 0 auto;
-    width: 100%;
-  }
   .slideshow {
     display: none;
   }
@@ -1854,7 +1848,9 @@ h3 {
 .featured-product-item a h3 {
   color: rgb(29, 29, 29);
   width: 85%;
-  margin-top: 1rem;
+  margin: 0 auto;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
 }
 .featured-product-item span a {
   color: rgb(238, 238, 238);
@@ -1924,13 +1920,14 @@ h3 {
 }
 
 .price {
-  color: rgb(29, 29, 29);
-  font-weight: 600;
+ 
+  
   font-size: 1.5rem;
 }
 .servis-btn {
   margin: 0 auto;
 }
+ 
 
 .card button {
   border: none;
